--- a/requirements.txt
+++ b/requirements.txt
@@ -1,147 +1,2 @@
-anyio==3.6.2
-appdirs==1.4.4
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
-attrs==22.2.0
-autocommand==2.2.2
-backcall==0.2.0
-beautifulsoup4==4.11.2
-bleach==6.0.0
-btrfsutil==6.2.1
-certifi==2022.12.7
-cffi==1.15.1
-chardet==5.1.0
-click==8.1.3
-cloud-init==23.1.1
-comm==0.1.2
-configobj==5.1.0.dev0
-contourpy==1.0.7
-cryptography==39.0.2
-cycler==0.11.0
-Cython==0.29.33
-debugpy==1.6.6
-decorator==5.1.1
-defusedxml==0.7.1
-distro==1.8.0
-executing==1.2.0
-fastjsonschema==2.16.3
-fonttools==4.39.0
-fqdn==1.5.1
-fst-pso==1.8.1
-FuzzyTM==2.0.5
-gensim==4.3.0
-graphviz==0.20.1
-idna==3.4
-importlib-metadata==5.0.0
-inflect==6.0.2
-ipykernel==6.21.3
-ipython==8.11.0
-ipython-genutils==0.2.0
-isoduration==20.11.0
-jaraco.context==4.3.0
-jaraco.functools==3.6.0
-jaraco.text==3.11.1
-jedi==0.18.2
-Jinja2==3.1.2
-joblib==1.2.0
-jsonpatch==1.32
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter-events==0.6.3
-jupyter_client==8.0.3
-jupyter_core==5.2.0
-jupyter_server==2.4.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-kiwisolver==1.4.4
-lit==15.0.7.dev0
-louis==3.24.0
-MarkupSafe==2.1.2
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
-meson==1.0.1
-miniful==0.0.6
-mistune==2.0.5
-more-itertools==9.0.0
-nbclassic==0.5.3
-nbclient==0.7.2
-nbconvert==7.2.9
-nbformat==5.7.3
-nest-asyncio==1.5.6
-netifaces==0.11.0
-nftables==0.1
-nltk==3.8.1
-notebook==6.5.3
-notebook_shim==0.2.2
-nspektr==0.4.0
-numpy==1.24.2
-oauthlib==3.2.2
-OpenCC==1.1.5
-ordered-set==4.1.0
-packaging==23.0
-pandas==1.5.3
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.4.0
-platformdirs==3.0.0
-ply==3.11
-prometheus-client==0.16.0
-prompt-toolkit==3.0.38
-psutil==5.9.4
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycparser==2.21
-pycryptodome==3.17
-pydantic==1.10.6
-pyee==8.2.2
-pyFUME==0.2.25
-Pygments==2.14.0
-PyGObject==3.42.2
-pyparsing==3.0.9
-pyppeteer==1.0.2
-pyrsistent==0.19.3
-pyserial==3.5
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-pytz==2022.7.1
-PyYAML==6.0
-pyzmq==25.0.0
-Reflector==2021.11.20.2.41.3
-regex==2022.10.31
-requests==2.28.2
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-scikit-learn==1.2.1
-scipy==1.10.1
-Send2Trash==1.8.0
-simpful==2.10.0
-six==1.16.0
-sklearn==0.0.post1
-smart-open==6.3.0
-sniffio==1.3.0
-soupsieve==2.4
-stack-data==0.6.2
-team==1.0
-terminado==0.17.1
-threadpoolctl==3.1.0
-tinycss2==1.2.1
-tomli==2.0.1
-tornado==6.2
-tqdm==4.65.0
-traitlets==5.9.0
-trove-classifiers==2023.3.10
-typing_extensions==4.5.0
-uri-template==1.2.0
-urllib3==1.26.13
-validate==5.1.0.dev0
-validate-pyproject==0.12.1
-wcwidth==0.2.5
-webcolors==1.12
-webencodings==0.5.1
-websocket-client==1.5.1
-websockets==10.4
-zipp==3.15.0
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
